versioned_docs/version-5.4/client-api/operations/maintenance/get-stats.mdx
---
title: "Get Statistics"
hide_table_of_contents: true
sidebar_label: Get Statistics
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Get Statistics
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Statistics can be retrieved for the database and for collections.  

* By default, statistics are retrieved for the database defined in the Document Store.   
  To get database and collection statistics for another database use [ForDatabase](../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database).  

* In this page:
    * [Get collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-collection-statistics)
    * [Get detailed collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-collection-statistics)
    * [Get database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-database-statistics)
    * [Get detailed database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-database-statistics)
    * [Get statistics for another database](../../../client-api/operations/maintenance/get-stats.mdx#get-statistics-for-another-database)
</Admonition>
## Get collection statistics

To get **collection statistics**, use `GetCollectionStatisticsOperation`:  
<TabItem value="stats_1" label="stats_1">
<CodeBlock language="csharp">
{`// Pass an instance of class \`GetCollectionStatisticsOperation\` to the store 
CollectionStatistics stats =
    store.Maintenance.Send(new GetCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `CollectionStatistics` object.
<TabItem value="stats_1_results" label="stats_1_results">
<CodeBlock language="csharp">
{`// Collection stats results:
public class CollectionStatistics
\{
    // Total # of documents in all collections
    public long CountOfDocuments \{ get; set; \}
    // Total # of conflicts
    public long CountOfConflicts \{ get; set; \}
    // Total # of documents per collection
    public Dictionary<string, long> Collections \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>



## Get detailed collection statistics

To get **detailed collection statistics**, use `GetDetailedCollectionStatisticsOperation`:  
<TabItem value="stats_2" label="stats_2">
<CodeBlock language="csharp">
{`// Pass an instance of class \`GetDetailedCollectionStatisticsOperation\` to the store 
DetailedCollectionStatistics stats =
    store.Maintenance.Send(new GetDetailedCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedCollectionStatistics` object.
<TabItem value="stats_2_results" label="stats_2_results">
<CodeBlock language="csharp">
{`// Detailed collection stats results:
public class DetailedCollectionStatistics
\{
    // Total # of documents in all collections
    public long CountOfDocuments \{ get; set; \}
    // Total # of conflicts
    public long CountOfConflicts \{ get; set; \}
    // Collection details per collection
    public Dictionary<string, CollectionDetails> Collections \{ get; set; \}
\}

// Details per collection
public class CollectionDetails
\{        
    public string Name \{ get; set; \}
    public long CountOfDocuments \{ get; set; \}
    public Size Size \{ get; set; \}
    public Size DocumentsSize \{ get; set; \}
    public Size TombstonesSize \{ get; set; \}
    public Size RevisionsSize \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>



## Get database statistics

To get **database statistics**, use `GetStatisticsOperation`:  
<TabItem value="stats_3" label="stats_3">
<CodeBlock language="csharp">
{`// Pass an instance of class \`GetStatisticsOperation\` to the store 
DatabaseStatistics stats =
    store.Maintenance.Send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DatabaseStatistics` object.
<TabItem value="stats_3_results" label="stats_3_results">
<CodeBlock language="csharp">
{`// Database stats results:
public class DatabaseStatistics
\{
    public long? LastDocEtag \{ get; set; \}      // Last document etag in database
    public long? LastDatabaseEtag \{ get; set; \} // Last database etag
    
    public int CountOfIndexes \{ get; set; \}     // Total # of indexes in database
    public long CountOfDocuments \{ get; set; \}  // Total # of documents in database
    public long CountOfRevisionDocuments \{ get; set; \}  // Total # of revision documents in database
    public long CountOfDocumentsConflicts \{ get; set; \} // Total # of documents conflicts in database
    public long CountOfTombstones \{ get; set; \}         // Total # of tombstones in database
    public long CountOfConflicts \{ get; set; \}          // Total # of conflicts in database
    public long CountOfAttachments \{ get; set; \}        // Total # of attachments in database
    public long CountOfUniqueAttachments \{ get; set; \}  // Total # of unique attachments in database
    public long CountOfCounterEntries \{ get; set; \}     // Total # of counter-group entries in database
    public long CountOfTimeSeriesSegments \{ get; set; \} // Total # of time-series segments in database
    
    // List of stale index names in database
    public string[] StaleIndexes => Indexes?.Where(x => x.IsStale).Select(x => x.Name).ToArray();
    // Statistics for each index in database
    public IndexInformation[] Indexes \{ get; set; \}
    
    public string DatabaseChangeVector \{ get; set; \} // Global change vector of the database
    public string DatabaseId \{ get; set; \}           // Database identifier
    public bool Is64Bit \{ get; set; \}                // Indicates if process is 64-bit
    public string Pager \{ get; set; \}                // Component handling the memory-mapped files
    public DateTime? LastIndexingTime \{ get; set; \}  // Last time of indexing an item
    public Size SizeOnDisk \{ get; set; \}             // Database size on disk
    public Size TempBuffersSizeOnDisk \{ get; set; \}  // Temp buffers size on disk
    public int NumberOfTransactionMergerQueueOperations \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>



## Get detailed database statistics

To get **detailed database statistics**, use `GetDetailedStatisticsOperation`:  
<TabItem value="stats_4" label="stats_4">
<CodeBlock language="csharp">
{`// Pass an instance of class \`GetDetailedStatisticsOperation\` to the store 
DetailedDatabaseStatistics stats =
    store.Maintenance.Send(new GetDetailedStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedDatabaseStatistics` object.
<TabItem value="stats_4_results" label="stats_4_results">
<CodeBlock language="csharp">
{`// Detailed database stats results:
public class DetailedDatabaseStatistics : DatabaseStatistics
\{
    // Total # of identities in database
    public long CountOfIdentities \{ get; set; \}
    // Total # of compare-exchange items in database
    public long CountOfCompareExchange \{ get; set; \}
    // Total # of cmpXchg tombstones in database
    public long CountOfCompareExchangeTombstones \{ get; set; \}
    // Total # of TS deleted ranges values in database
    public long CountOfTimeSeriesDeletedRanges \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>



## Get statistics for another database

* By default, you get statistics for the database defined in your Document Store.  
* Use `ForDatabase` to get database and collection statistics for another database.  
* `ForDatabase` can be used with **any** of the above statistics options.

<TabItem value="stats_5" label="stats_5">
<CodeBlock language="csharp">
{`// Get stats for 'AnotherDatabase':
DatabaseStatistics stats =
    store.Maintenance.ForDatabase("AnotherDatabase").Send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>

* Learn more about switching operations to another database [here](../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).




</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

* Statistics about your database and collections can be retrieved.

* By default, you get stats for the database defined in your Document Store.   
  To get database and collection stats for another database use [forDatabase](../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database).

* In this page:
    * [Get collection stats](../../../client-api/operations/maintenance/get-stats.mdx#get-collection-stats)
    * [Get detailed collection stats](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-collection-stats)
    * [Get database stats](../../../client-api/operations/maintenance/get-stats.mdx#get-database-stats)
    * [Get detailed database stats](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-database-stats)
    * [Get stats for another database](../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database)
</Admonition>
## Get collection stats
<Admonition type="note" title="Note">
Use `GetCollectionStatisticsOperation` to get **collection stats**.
<TabItem value="stats_1" label="stats_1">
<CodeBlock language="java">
{`// Pass an instance of class \`GetCollectionStatisticsOperation\` to the store 
CollectionStatistics stats =
    store.maintenance().send(new GetCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="Note">
Stats are returned in the `CollectionStatistics` object.
<TabItem value="stats_1_results" label="stats_1_results">
<CodeBlock language="java">
{`public class CollectionStatistics \{
// Collection stats results:
    // Total # of documents in all collections
    int CountOfDocuments;
    // Total # of conflicts
    int CountOfConflicts;
    // Total # of documents per collection
    Map<String, Long> Collections;
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get detailed collection stats
<Admonition type="note" title="Note">
Use `GetDetailedCollectionStatisticsOperation` to get **detailed collection stats**.
<TabItem value="stats_2" label="stats_2">
<CodeBlock language="java">
{`// Pass an instance of class \`GetDetailedCollectionStatisticsOperation\` to the store 
DetailedCollectionStatistics stats =
    store.maintenance().send(new GetDetailedCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="Note">
Stats are returned in the `DetailedCollectionStatistics` object.
<TabItem value="stats_2_results" label="stats_2_results">
<CodeBlock language="java">
{`// Detailed collection stats results:
public class DetailedCollectionStatistics  \{
    // Total # of documents in all collections
    long CountOfDocuments;
    // Total # of conflicts
    long CountOfConflicts;
    // Collection details per collection
    Map<String, CollectionDetails> Collections;
\}

// Details per collection
public class CollectionDetails \{
    String Name;
    long CountOfDocuments;
    Size Size;
    Size DocumentsSize;
    Size TombstonesSize;
    Size RevisionsSize;
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get database stats
<Admonition type="note" title="Note">
Use `GetStatisticsOperation` to get **database stats**.
<TabItem value="stats_3" label="stats_3">
<CodeBlock language="java">
{`// Pass an instance of class \`GetStatisticsOperation\` to the store 
DatabaseStatistics stats =
    store.maintenance().send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="Note">
Stats are returned in the `DatabaseStatistics` object.
<TabItem value="stats_3_results" label="stats_3_results">
<CodeBlock language="java">
{`// Database stats results:
public class DatabaseStatistics \{
    Long LastDocEtag;       // Last document etag in database
    Long LastDatabaseEtag;  // Last database etag
    
    int CountOfIndexes;     // Total # of indexes in database
    long CountOfDocuments;  // Total # of documents in database
    long CountOfRevisionDocuments;  // Total # of revision documents in database
    long CountOfDocumentsConflicts; // Total # of documents conflicts in database
    long CountOfTombstones;         // Total # of tombstones in database
    long CountOfConflicts;          // Total # of conflicts in database
    long CountOfAttachments;        // Total # of attachments in database
    long CountOfUniqueAttachments;  // Total # of unique attachments in database
    long CountOfCounterEntries;     // Total # of counter-group entries in database
    long CountOfTimeSeriesSegments; // Total # of time-series segments in database

    IndexInformation[] Indexes;     // Statistics for each index in database

    String DatabaseChangeVector;    // Global change vector of the database
    String DatabaseId;              // Database identifier
    boolean Is64Bit;                // Indicates if process is 64-bit
    String Pager;                   // Component handling the memory-mapped files
    Date LastIndexingTime;          // Last time of indexing an item
    Size SizeOnDisk;                // Database size on disk
    Size TempBuffersSizeOnDisk;     // Temp buffers size on disk
    int NumberOfTransactionMergerQueueOperations;
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get detailed database stats
<Admonition type="note" title="Note">
Use `GetDetailedStatisticsOperation` to get **detailed database stats**.
<TabItem value="stats_4" label="stats_4">
<CodeBlock language="java">
{`// Pass an instance of class \`GetDetailedStatisticsOperation\` to the store 
DetailedDatabaseStatistics stats =
    store.maintenance().send(new GetDetailedStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="Note">
Stats are returned in the `DetailedDatabaseStatistics` object.
<TabItem value="stats_4_results" label="stats_4_results">
<CodeBlock language="java">
{`// Detailed database stats results:
public class DetailedDatabaseStatistics extends DatabaseStatistics \{
    // Total # of identities in database
    long CountOfIdentities;
    // Total # of compare-exchange items in database
    long CountOfCompareExchange;
    // Total # of cmpXchg tombstones in database
    long CountOfCompareExchangeTombstones;
    // Total # of TS deleted ranges values in database
    long CountOfTimeSeriesDeletedRanges;
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get stats for another database
<Admonition type="note" title="Note">

* By default, you get stats for the database defined in your Document Store.
* Use `forDatabase` to get database & collection stats for another database.
* 'ForDatabase' can be used with **any** of the above stats options.
 
<TabItem value="stats_5" label="stats_5">
<CodeBlock language="java">
{`// Get stats for 'AnotherDatabase':
DatabaseStatistics stats =
    store.maintenance().forDatabase("AnotherDatabase").send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>

* Learn more about switching operations to another database [here](../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).

</Admonition>



</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="Note">

* Statistics can be retrieved for the database and for collections.  

* By default, statistics are retrieved for the database defined in the Document Store.   
  To get database and collection statistics for another database use [for_database](../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database).  

* In this page:
    * [Get collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-collection-statistics)
    * [Get detailed collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-collection-statistics)
    * [Get database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-database-statistics)
    * [Get detailed database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-database-statistics)
    * [Get statistics for another database](../../../client-api/operations/maintenance/get-stats.mdx#get-statistics-for-another-database)
</Admonition>
## Get collection statistics

To get **collection statistics**, use `GetCollectionStatisticsOperation`:  
<TabItem value="stats_1" label="stats_1">
<CodeBlock language="python">
{`# Pass an instance of class 'GetCollectionStatisticsOperation' to the store
stats = store.maintenance.send(GetCollectionStatisticsOperation())
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `CollectionStatistics` object.
<TabItem value="stats_1_results" label="stats_1_results">
<CodeBlock language="python">
{`class CollectionStatistics:
    def __init__(
        self,
        count_of_documents: Optional[int] = None,
        count_of_conflicts: Optional[int] = None,
        collections: Optional[Dict[str, int]] = None,
    ): ...
`}
</CodeBlock>
</TabItem>



## Get detailed collection statistics

To get **detailed collection statistics**, use `GetDetailedCollectionStatisticsOperation`:  
<TabItem value="stats_2" label="stats_2">
<CodeBlock language="python">
{`# Pass an instance of class 'GetDetailedCollectionStatisticsOperation' to the store
stats = store.maintenance.send(GetDetailedCollectionStatisticsOperation())
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedCollectionStatistics` object.
<TabItem value="stats_2_results" label="stats_2_results">
<CodeBlock language="python">
{`class Size:
    def __init__(self, size_in_bytes: int = None, human_size: str = None): ...

class CollectionDetails:
    def __init__(
        self,
        name: str = None,
        count_of_documents: int = None,
        size: Size = None,
        documents_size: Size = None,
        tombstones_size: Size = None,
        revisions_size: Size = None,
    ): ...

class DetailedCollectionStatistics:
    def __init__(
        self,
        count_of_documents: int = None,
        count_of_conflicts: int = None,
        collections: Dict[str, CollectionDetails] = None,
    ) -> None: ...
`}
</CodeBlock>
</TabItem>



## Get database statistics

To get **database statistics**, use `GetStatisticsOperation`:  
<TabItem value="stats_3" label="stats_3">
<CodeBlock language="python">
{`# Pass an instance of class 'GetStatisticsOperation' to the store
stats = store.maintenance.send(GetStatisticsOperation())
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DatabaseStatistics` object.
<TabItem value="stats_3_results" label="stats_3_results">
<CodeBlock language="python">
{`class DatabaseStatistics:
    def __init__(
        self,
        last_doc_etag: int = None,
        last_database_etag: int = None,
        count_of_indexes: int = None,
        count_of_documents: int = None,
        count_of_revision_documents: int = None,
        count_of_documents_conflicts: int = None,
        count_of_tombstones: int = None,
        count_of_conflicts: int = None,
        count_of_attachments: int = None,
        count_of_unique_attachments: int = None,
        count_of_counter_entries: int = None,
        count_of_time_series_segments: int = None,
        indexes: List[IndexInformation] = None,
        database_change_vector: str = None,
        database_id: str = None,
        is_64_bit: bool = None,
        pager: str = None,
        last_indexing_time: datetime.datetime = None,
        size_on_disk: Size = None,
        temp_buffers_size_on_disk: Size = None,
        number_of_transaction_merger_queue_operations: int = None,
    ): ...
`}
</CodeBlock>
</TabItem>



## Get detailed database statistics

To get **detailed database statistics**, use `GetDetailedStatisticsOperation`:  
<TabItem value="stats_4" label="stats_4">
<CodeBlock language="python">
{`# Pass an instance of class 'GetDetailedStatisticsOperation' to the store
stats = store.maintenance.send(GetDetailedStatisticsOperation())
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedDatabaseStatistics` object.
<TabItem value="stats_4_results" label="stats_4_results">
<CodeBlock language="python">
{`class DetailedDatabaseStatistics(DatabaseStatistics):
    def __init__(
        self,
        last_doc_etag: int = None,
        last_database_etag: int = None,
        count_of_indexes: int = None,
        count_of_documents: int = None,
        count_of_revision_documents: int = None,
        count_of_documents_conflicts: int = None,
        count_of_tombstones: int = None,
        count_of_conflicts: int = None,
        count_of_attachments: int = None,
        count_of_unique_attachments: int = None,
        count_of_counter_entries: int = None,
        count_of_time_series_segments: int = None,
        indexes: List[IndexInformation] = None,
        database_change_vector: str = None,
        database_id: str = None,
        is_64_bit: bool = None,
        pager: str = None,
        last_indexing_time: datetime.datetime = None,
        size_on_disk: Size = None,
        temp_buffers_size_on_disk: Size = None,
        number_of_transaction_merger_queue_operations: int = None,
        count_of_identities: int = None,  # Total # of identities in database
        count_of_compare_exchange: int = None,  # Total # of compare-exchange items in database
        count_of_compare_exchange_tombstones: int = None,  # Total # of cmpXchg tombstones in database
    ): ...
`}
</CodeBlock>
</TabItem>



## Get statistics for another database

* By default, you get statistics for the database defined in your Document Store.  
* Use `for_database` to get database and collection statistics for another database.  
* `for_database` can be used with **any** of the above statistics options.

<TabItem value="stats_5" label="stats_5">
<CodeBlock language="python">
{`# Get stats for 'AnotherDatabase'
stats = store.maintenance.for_database("AnotherDatabase").send(GetStatisticsOperation())
`}
</CodeBlock>
</TabItem>

* Learn more about switching operations to another database [here](../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).




</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="Note">

* Statistics can be retrieved for the database and for collections.  

* By default, statistics are retrieved for the database defined in the Document Store.   
  To get database and collection statistics for another database use [forDatabase](../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database).  

* In this page:
    * [Get collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-collection-statistics)
    * [Get detailed collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-collection-statistics)
    * [Get database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-database-statistics)
    * [Get detailed database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-database-statistics)
    * [Get statistics for another database](../../../client-api/operations/maintenance/get-stats.mdx#get-statistics-for-another-database)
</Admonition>
## Get collection statistics

To get **collection statistics**, use `GetCollectionStatisticsOperation`:  
<TabItem value="stats_1" label="stats_1">
<CodeBlock language="php">
{`// Pass an instance of class \`GetCollectionStatisticsOperation\` to the store
/** @var  CollectionStatistics $stats */
$stats = $store->maintenance()->send((new GetCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `CollectionStatistics` object.
<TabItem value="stats_1_results" label="stats_1_results">
<CodeBlock language="php">
{`// Collection stats results:
class CollectionStatistics
\{
    // Total # of documents in all collections
    private ?int $countOfDocuments = null;
    // Total # of conflicts
    private ?int $countOfConflicts = null;
    // Total # of documents per collection
    private array $collections = [];

    // ... getters and setters
\}
`}
</CodeBlock>
</TabItem>



## Get detailed collection statistics

To get **detailed collection statistics**, use `GetDetailedCollectionStatisticsOperation`:  
<TabItem value="stats_2" label="stats_2">
<CodeBlock language="php">
{`// Pass an instance of class \`GetDetailedCollectionStatisticsOperation\` to the store
/** @var DetailedCollectionStatistics $stats */
$stats = $store->maintenance()->send(new GetDetailedCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedCollectionStatistics` object.
<TabItem value="stats_2_results" label="stats_2_results">
<CodeBlock language="php">
{`// Detailed collection stats results:
public class DetailedCollectionStatistics
\{
    // Total # of documents in all collections
    public long CountOfDocuments \{ get; set; \}
    // Total # of conflicts
    public long CountOfConflicts \{ get; set; \}
    // Collection details per collection
    public Dictionary<string, CollectionDetails> Collections \{ get; set; \}
\}

// Details per collection
class CollectionDetails
\{
    private ?string $name = null;
    private ?int $countOfDocuments = null;
    private ?Size $size = null;
    private ?Size $documentsSize = null;
    private ?Size $tombstonesSize = null;
    private ?Size $revisionsSize = null;

    // ... getters and setters
\}
`}
</CodeBlock>
</TabItem>



## Get database statistics

To get **database statistics**, use `GetStatisticsOperation`:  
<TabItem value="stats_3" label="stats_3">
<CodeBlock language="php">
{`// Pass an instance of class \`GetStatisticsOperation\` to the store
/** @var DatabaseStatistics $stats */
$stats = $store->maintenance()->send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DatabaseStatistics` object.
<TabItem value="stats_3_results" label="stats_3_results">
<CodeBlock language="php">
{`// Database stats results:
class DatabaseStatistics implements ResultInterface
\{
    private ?int $lastDocEtag = null;               // Last document etag in database
    private ?int $lastDatabaseEtag = null;          // Last database etag

    private ?int $countOfIndexes = null;            // Total # of indexes in database
    private ?int $countOfDocuments = null;          // Total # of documents in database
    private ?int $countOfRevisionDocuments = null;  // Total # of revision documents in database
    private ?int $countOfDocumentsConflicts = null; // Total # of documents conflicts in database
    private ?int $countOfTombstones = null;         // Total # of tombstones in database
    private ?int $countOfConflicts = null;          // Total # of conflicts in database
    private ?int $countOfAttachments = null;        // Total # of attachments in database
    private ?int $countOfUniqueAttachments = null;  // Total # of unique attachments in database
    private ?int $countOfCounterEntries = null;     // Total # of counter-group entries in database
    private ?int $countOfTimeSeriesSegments = null; // Total # of time-series segments in database

    // List of stale index names in database
    public function getStaleIndexes(): IndexInformationArray
    \{
        return IndexInformationArray::fromArray(
            array_map(
                function (IndexInformation $index) \{
                    return $index->isStale();
                \},
            $this->indexes->getArrayCopy())
        );
    \}

    // Statistics for each index in database
    private ?IndexInformationArray $indexes = null;

    private ?string $databaseChangeVector = null;           // Global change vector of the database
    private ?string $databaseId = null;                     // Database identifier
    private bool $is64Bit = false;                          // Indicates if process is 64-bit
    private ?string $pager = null;                          // Component handling the memory-mapped files
    private ?DateTimeInterface $lastIndexingTime = null;    // Last time of indexing an item
    private ?Size $sizeOnDisk = null;                       // Database size on disk
    private ?Size $tempBuffersSizeOnDisk = null;            // Temp buffers size on disk
    private ?int $numberOfTransactionMergerQueueOperations = null;

    // ... getters and setters
\}
`}
</CodeBlock>
</TabItem>



## Get detailed database statistics

To get **detailed database statistics**, use `GetDetailedStatisticsOperation`:  
<TabItem value="stats_4" label="stats_4">
<CodeBlock language="php">
{`// Pass an instance of class \`GetDetailedStatisticsOperation\` to the store
/** @var DetailedDatabaseStatistics $stats */
$stats = $store->maintenance()->send(new GetDetailedStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedDatabaseStatistics` object.
<TabItem value="stats_4_results" label="stats_4_results">
<CodeBlock language="php">
{`// Detailed database stats results:
class DetailedDatabaseStatistics extends DatabaseStatistics implements ResultInterface
\{
    // Total # of identities in database
    private ?int $countOfIdentities = null;
    // Total # of compare-exchange items in database
    private ?int $countOfCompareExchange = null;
    // Total # of cmpXchg tombstones in database
    private ?int $countOfCompareExchangeTombstones = null;
    // Total # of TS deleted ranges values in database
    private ?int $countOfTimeSeriesDeletedRanges = null;

    // ... getters and setters
\}
`}
</CodeBlock>
</TabItem>



## Get statistics for another database

* By default, you get statistics for the database defined in your Document Store.  
* Use `forDatabase` to get database and collection statistics for another database.  
* `forDatabase` can be used with **any** of the above statistics options.

<TabItem value="stats_5" label="stats_5">
<CodeBlock language="php">
{`// Get stats for 'AnotherDatabase':
/** @var DatabaseStatistics $stats */
$stats = $store->maintenance()->forDatabase("AnotherDatabase")->send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>

* Learn more about switching operations to another database [here](../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Statistics can be retrieved for the database and for collections.  

* By default, statistics are retrieved for the database defined in the Document Store.   
  To get database and collection statistics for another database use [forDatabase](../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database).  

* In this page:
    * [Get collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-collection-statistics)
    * [Get detailed collection statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-collection-statistics)
    * [Get database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-database-statistics)
    * [Get detailed database statistics](../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-database-statistics)
    * [Get statistics for another database](../../../client-api/operations/maintenance/get-stats.mdx#get-statistics-for-another-database)
</Admonition>
## Get collection statistics

To get **collection statistics**, use `GetCollectionStatisticsOperation`:  
<TabItem value="stats_1" label="stats_1">
<CodeBlock language="js">
{`// Pass an instance of class \`GetCollectionStatisticsOperation\` to the store 
const stats = await store.maintenance.send(new GetCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `CollectionStatistics` object.
<TabItem value="stats_1_results" label="stats_1_results">
<CodeBlock language="js">
{`// Object with following props is returned:
\{
    // Total # of documents in all collections
    countOfDocuments,
    // Total # of conflicts
    countOfConflicts,
    // Dictionary with total # of documents per collection
    collections
\}
`}
</CodeBlock>
</TabItem>



## Get detailed collection statistics

To get **detailed collection statistics**, use `GetDetailedCollectionStatisticsOperation`:  
<TabItem value="stats_2_results" label="stats_2_results">
<CodeBlock language="js">
{`// Object with following props is returned:
\{
    // Total # of documents in all collections
    countOfDocuments,
    // Total # of conflicts
    countOfConflicts,
    // Dictionary with 'collection details per collection'
    collections,
\}

// 'Collection details per collection' object props:
\{
    name,
    countOfDocuments,
    size,
    documentsSize,
    tombstonesSize,
    revisionsSize
\}
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedCollectionStatistics` object.
<TabItem value="stats_2_results" label="stats_2_results">
<CodeBlock language="python">
{`class Size:
    def __init__(self, size_in_bytes: int = None, human_size: str = None): ...

class CollectionDetails:
    def __init__(
        self,
        name: str = None,
        count_of_documents: int = None,
        size: Size = None,
        documents_size: Size = None,
        tombstones_size: Size = None,
        revisions_size: Size = None,
    ): ...

class DetailedCollectionStatistics:
    def __init__(
        self,
        count_of_documents: int = None,
        count_of_conflicts: int = None,
        collections: Dict[str, CollectionDetails] = None,
    ) -> None: ...
`}
</CodeBlock>
</TabItem>



## Get database statistics

To get **database statistics**, use `GetStatisticsOperation`:  
<TabItem value="stats_3" label="stats_3">
<CodeBlock language="js">
{`// Pass an instance of class \`GetStatisticsOperation\` to the store 
const stats = await store.maintenance.send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DatabaseStatistics` object.
<TabItem value="stats_3_results" label="stats_3_results">
<CodeBlock language="js">
{`// Object with following props is returned:
\{
    lastDocEtag,      // Last document etag in database
    lastDatabaseEtag, // Last database etag
    
    countOfIndexes,            // Total # of indexes in database
    countOfDocuments,          // Total # of documents in database
    countOfRevisionDocuments,  // Total # of revision documents in database
    countOfDocumentsConflicts, // Total # of documents conflicts in database 
    countOfTombstones,         // Total # of tombstones in database
    countOfConflicts,          // Total # of conflicts in database
    countOfAttachments,        // Total # of attachments in database
    countOfUniqueAttachments,  // Total # of unique attachments in database
    countOfCounterEntries,     // Total # of counter-group entries in database
    countOfTimeSeriesSegments, // Total # of time-series segments in database
    
    indexes, // Statistics for each index in database (array of IndexInformation) 

    databaseChangeVector,  // Global change vector of the database
    databaseId,            // Database identifier
    is64Bit,               // Indicates if process is 64-bit 
    pager,                 // Component handling the memory-mapped files
    lastIndexingTime,      // Last time of indexing an item
    sizeOnDisk,            // Database size on disk
    tempBuffersSizeOnDisk, // Temp buffers size on disk
    numberOfTransactionMergerQueueOperations
\}
`}
</CodeBlock>
</TabItem>



## Get detailed database statistics

To get **detailed database statistics**, use `GetDetailedStatisticsOperation`:  
<TabItem value="stats_4" label="stats_4">
<CodeBlock language="js">
{`// Pass an instance of class \`GetDetailedStatisticsOperation\` to the store 
const stats = await store.maintenance.send(new GetDetailedStatisticsOperation());
`}
</CodeBlock>
</TabItem>
Statistics are returned in the `DetailedDatabaseStatistics` object.
<TabItem value="stats_4_results" label="stats_4_results">
<CodeBlock language="js">
{`// Resulting object contains all database stats props from above and the following in addition:
\{
    // Total # of identities in database
    countOfIdentities,
    // Total # of compare-exchange items in database
    countOfCompareExchange,
    // Total # of cmpXchg tombstones in database
    countOfCompareExchangeTombstones,
    // Total # of TS deleted ranges values in database
    countOfTimeSeriesDeletedRanges
\}
`}
</CodeBlock>
</TabItem>



## Get statistics for another database

* By default, you get statistics for the database defined in your Document Store.  
* Use `forDatabase` to get database and collection statistics for another database.  
* `forDatabase` can be used with **any** of the above statistics options.

<TabItem value="stats_5" label="stats_5">
<CodeBlock language="js">
{`// Get stats for 'AnotherDatabase':
const stats = 
    await store.maintenance.forDatabase("AnotherDatabase").send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>

* Learn more about switching operations to another database [here](../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).




</LanguageContent>

<!---
### Operations
- [What are Operations](../../../client-api/operations/what-are-operations)
- [Switch operation to another database](../../../client-api/operations/how-to/switch-operations-to-a-different-database)

### FAQ
- [What is a Collection](../../../client-api/faq/what-is-a-collection)

### Client API
- [Get Query Statistics](../../../client-api/session/querying/how-to-get-query-statistics)


-->